# UnnamedOS

./: .gitignore  .gitmodules  Makefile  limine.cfg
MicroKernel/: CMakeLists.txt  linkscript-x86_64.ld
MicroKernel/hal/arch/x86_64/: CPU.cpp  GDT.asm  GDT.cpp  IDT.asm  IDT.cpp  arch.cpp  io.cpp  log.cpp
MicroKernel/hal/arch/x86_64/include/: CPU.hpp  GDT.hpp  IDT.hpp  limine.hpp  ports.hpp
MicroKernel/hal/include/: hal.hpp  io.hpp  log.hpp
MicroKernel/include/: logger.hpp
MicroKernel/include/drivers/: serial.hpp
MicroKernel/libk++/: cstring.cpp  fmt.cpp
MicroKernel/libk++/include/: cstring
MicroKernel/libk++/include/libk++/: fmt.hpp
MicroKernel/src/: kernel.cpp  logger.cpp
